# cutedsl-trace

./: .gitignore  README.md  pyproject.toml
benchmarks/: __init__.py  benchmark_gemm_overhead.py  benchmark_overhead.py
cutedsl_trace/: config.py  device.py  host.py  types.py
examples/: gemm_shared.py
src/cutedsl_trace/: __init__.py  host.py
tests/: test_gemm_minimal.py  test_gpu_trace_correctness.py  test_host.py  test_kernel.py  test_types.py
tools/: verify_nanotrace.py
visualizer/: app.js  index.html  parser.js  renderer.js  style.css
