[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutedsl-trace"
version = "0.1.0"
description = "GPU kernel tracing for CuteDSL"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Elentir"}
]
keywords = ["cuda", "gpu", "tracing", "profiling", "cutlass", "cutedsl", "nanotrace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/b-albar/cutedsl-trace"
"Bug Tracker" = "https://github.com/b-albar/cutedsl-trace/issues"

[tool.setuptools.packages.find]
where = ["cutedsl_trace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
